fix z-index of survey to overlay map buttons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ html, body {
    absolute;
    top: 0;
    left: 0;
-   z-index: 10;
+   z-index: 1500;
 }
 
 .noScroll {
